--- a/README.adoc
+++ b/README.adoc
@@ -37,7 +37,8 @@ USN: uuid:abc123-def456-ghi789-jkl012-mno345678901::upnp:rootdevice.
 == Setup
 . Make sure your device is connected to the same network as the Harman Kardon speaker. +
 
-. Clone this repository: +
+. Clone this repository:
+[source,bash]
 ----
     git clone https://github.com/vakintosh/hk_aura_protocol_analysis +
 ----
@@ -51,12 +52,14 @@ These commands can be found under link:Harman_Kardon_Remote[]
 This command sets the system volume to a specified level. +
 The volume level is specified in the <para> tag within the XML payload. +
 The minimum value is 0 and the maximum value is 100.
+[,python]
 ----
 python hk_app.py set_system_volume --para 0
 ----
 
 === set_bass_level
 This command sets the bass level to a specified value. The bass level is specified in the <para> tag within the XML payload. The minimum value is 0 and the maximum value is 100.
+[,python]
 ----
 python hk_app.py set_bass_level --para 0
 ----
@@ -64,6 +67,7 @@ python hk_app.py set_bass_level --para 0
 === set_EQ_mode to Stereo Widening
 This command sets the EQ mode to "Stereo Widening". +
 The EQ mode is specified in the <para> tag within the XML payload.
+[,python]
 ----
 python hk_app.py set_EQ_mode --para on
 ----
@@ -71,6 +75,7 @@ python hk_app.py set_EQ_mode --para on
 === set_EQ_mode to Basic
 This command sets the EQ mode to "Basic". +
 The EQ mode is specified in the <para> tag within the XML payload.
+[,python]
 ----
 python hk_app.py set_EQ_mode --para off
 ----
@@ -78,6 +83,7 @@ python hk_app.py set_EQ_mode --para off
 === heart-alive
 This command sends a heartbeat signal to keep the connection alive. +
 It does not require any parameters in the <para> tag within the XML payload.
+[,python]
 ----
 python hk_app.py heart-alive
 ----
@@ -85,6 +91,7 @@ python hk_app.py heart-alive
 === Power-off
 This command powers off the Harman Kardon Aura speaker. +
 It does not require any parameters in the <para> tag within the XML payload.
+[,python]
 ----
 python hk_app.py power-off
 ----
